--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 *.env
 # Test binary, built with `go test -c`
 *.test
+/main/logs.txt
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
@@ -25,4 +26,5 @@ go.work
 /pgdata/
 /main/sql/
 
-/main/tmp/*
+main/tmp/*
+main/logs.txt
